src/test/resources/etapa3/failing/variableAlreadyDeclaredInStart.ru
struct A {

}

impl A {
    .() {}
    fn method_1 () -> void {}
    st fn method_2(Int wala, Str jeje) -> Int {
        ret 1;
    }
}

start {
    Int a, a;
}